--- a/index.html
+++ b/index.html
@@ -8,40 +8,48 @@
     <title>Technical Documentation</title>
 </head>
 <body>
+    <nav id="navbar">
+        <header>Documentation</header>
+        <a href="#Introduction" class="nav-link">Introduction</a>
+        <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
+        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+        <a href="#Hello_world" class="nav-link">Hello world</a>
+        <a href="#Variables" class="nav-link">Variables</a>
+    </nav>
     <main id="main-doc">
         <section class="main-section" id="Introduction">
             <header>Introduction</header>
-            <p></p>
-            <p></p>
-            <code></code>
-            <li></li>
-            <li></li>            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus velit molestias inventore tempora harum!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse non odio quos illo, laborum commodi voluptates illum vel, autem odit optio cumque, incidunt quae corporis.</p>
+            <code>// some code goes here</code>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem ipsum dolor sit</li>            
         </section>
         <section class="main-section" id="What_you_should_already_know">
             <header>What you should already know</header>
-            <p></p>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quidem minima libero, quisquam debitis earum odit quis tenetur perspiciatis reiciendis mollitia? Hic quo officiis a.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit fugit aut illo. Laudantium perferendis harum, maiores nihil possimus velit aspernatur quam quo labore magnam consequatur laborum ducimus non eos itaque?</p>
             <code></code>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Lorem ipsum dolor sit</li>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem ipsum dolor sit amet</li>
         </section>
         <section class="main-section" id="JavaScript_and_Java">
             <header>JavaScript and Java</header>
-            <p></p>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam totam esse illo animi temporibus rem voluptas earum nemo! Eaque, voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi facilis sapiente repellendus? Deserunt amet labore vel, dolore id, suscipit iure blanditiis maxime modi aspernatur perferendis. Sunt amet modi labore praesentium. Quasi velit facere recusandae.</p>
             <code></code>
         </section>
         <section class="main-section" id="Hello_world">
             <header>Hello world</header>
-            <p></p>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sequi repudiandae officia omnis excepturi illum nisi nobis consequatur iste. Nobis vero ullam minus optio dolorum?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse eius quasi veritatis hic aliquam obcaecati. Sequi corrupti quibusdam corporis soluta?</p>
             <code></code>
         </section>
         <section class="main-section" id="Variables">
             <header>Variables</header>
-            <p></p>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, error neque modi ad rerum obcaecati?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non reprehenderit obcaecati, neque distinctio eos temporibus voluptas sequi dolorum dignissimos facilis cupiditate ullam, odit, voluptatem ipsa.</p>
             <code></code>
         </section>
     </main>
