--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <nav id="navbar">
         <header>Documentation</header>
-        <a href="#Introduction" class="nav-link">Introduction</a>
-        <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
-        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
-        <a href="#Hello_world" class="nav-link">Hello world</a>
-        <a href="#Variables" class="nav-link">Variables</a>
+        <ul>
+            <li><a href="#Introduction" class="nav-link">Introduction</a></li>
+            <li><a href="#What_you_should_already_know" class="nav-link">What you should already know</a></li>
+            <li><a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a></li>
+            <li><a href="#Hello_world" class="nav-link">Hello world</a></li>
+            <li><a href="#Variables" class="nav-link">Variables</a></li>
+        </ul>
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Introduction">
